--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,17 +1,18 @@
-blinker==1.7.0
-certifi==2024.2.2
+blinker==1.8.2
+certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
-Flask==3.0.2
-icalendar==5.0.11
-idna==3.6
-itsdangerous==2.1.2
-Jinja2==3.1.3
+Flask==3.0.3
+gunicorn==23.0.0
+icalendar==5.0.13
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
 MarkupSafe==2.1.5
-python-dateutil==2.8.2
-pytz==2024.1
-requests==2.31.0
+packaging==24.1
+python-dateutil==2.9.0.post0
+pytz==2024.2
+requests==2.32.3
 six==1.16.0
-urllib3==2.2.0
-Werkzeug==3.0.1
-gunicorn==21.0.1
+urllib3==2.2.3
+Werkzeug==3.0.4
